--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Menu </title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="./styles/estilos.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -22,7 +22,7 @@
                 <a class="active" href="#">Inicio</a>
             </li>
             <li>
-                <a href="#">Hola</a>
+                <a href="./quiz.html">Hola</a>
             </li>
             <li>
                 <a href="#">Caracola</a>
