--- a/quiz.html
+++ b/quiz.html
@@ -14,10 +14,9 @@
         <hr>
         <h2 id="question"></h2>
 
-        <div id="choices">
-        <hr/>
-        </div>
+        <div id="choices"></div>
         
+        <hr style="margin-top: 50px" />
         <footer>
             <p id="progress">Question x of y</p>
         </footer>
