Modificaciones en la pagina quiz

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Video Interactivo</title>
     <link rel="icon" type="image/png" href="./img/icone-html-bleue.png">
     <link rel="stylesheet" href="./styles/estilos.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+	  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Sans&display=swap" rel="stylesheet"> 
   </head>
 
   <body>
