--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <a href="#" class="logo nav-link">Logo</a>
+        <img src="./img/logo_españa.png" class="logo">
         <button class="nav-toggle" aria-label="Abrir menú">
           <i class="fas fa-bars"></i>
         </button>
