Modificaciones en el estilo del index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <body>
     <header class="header">
       <nav class="nav">
+        
         <img src="./img/logo_españa.png" class="logo">
+        <img src="./img/rfef.png" class="rfef">
         <button class="nav-toggle" aria-label="Abrir menú">
           <i class="fas fa-bars"></i>
         </button>
@@ -29,7 +31,8 @@
       </nav>
     </header>
 
-    <script defer src="player.js"></script>
+    
+    <script defer src="js/player.js"></script>
     <script src="https://kit.fontawesome.com/7e5b2d153f.js" crossorigin="anonymous"></script>
 
     <footer>
