--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           <li class="nav-menu-item">
             <a href="./quiz.html" class="nav-menu-link nav-link">CUESTIONARIO</a>
           </li>
+          <li class="nav-menu-item">
+            <a href="./DragDrop.html" class="nav-menu-link nav-link">DRAG AND DROP</a>
+          </li>
         </ul>
       </nav>
     </header>
