--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <footer>
         <div class="container-footer">
             <div class="redes-sociales">
-                <a href=""><i class="fab fa-github"></i></a>
+                <a href="https://github.com/ZaP3R0/Multimedia-22-23"><i class="fab fa-github"></i></a>
             </div>
             <div class="contenedor-footer">
                 <p class="copy">©Copyright 2022</p>
