Modificacion de nombres e iconos

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <a href="#" class="nav-menu-link nav-link">Video</a>
           </li>
           <li class="nav-menu-item">
-            <a href="./quiz.html" class="nav-menu-link nav-link">CUESTIONARIO</a>
+            <a href="./Cuestionario.html" class="nav-menu-link nav-link">CUESTIONARIO</a>
           </li>
           <li class="nav-menu-item">
-            <a href="./DragDrop.html" class="nav-menu-link nav-link">DRAG AND DROP</a>
+            <a href="./Juego.html" class="nav-menu-link nav-link">JUEGO</a>
           </li>
         </ul>
       </nav>
