--- a/Cuestionario.html
+++ b/Cuestionario.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Quiz de la Selección Española</title>
     <link rel="stylesheet" href="./styles/quiz.css">
+    <link rel="icon" type="image/png" href="./img/icone-html-bleue.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.0/dist/sweetalert2.all.min.js"></script>
   </head>
   
