--- a/Juego.html
+++ b/Juego.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="./img/icone-html-bleue.png">
     <link rel="stylesheet" href="./styles/DragDrop.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.0/dist/sweetalert2.all.min.js"></script>
-    <title>Juego Drag and Drop Jugadores</title>
+    <title>Juego Drag and Drop</title>
 </head>
 <body>
     <main class="main-container">
