Estilos del video

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
       </nav>
     </header>
 
+    <div class="videoI">
+      <iframe src="https://albertosanz.h5p.com/content/1291818787223719327/embed" aria-label="Clone of Historia de España en los Mundiales" width="500" height="400" frameborder="0" allowfullscreen="allowfullscreen" allow="autoplay *; geolocation *; microphone *; camera *; midi *; encrypted-media *"></iframe>
+    </div>
+    
+    <script src="https://albertosanz.h5p.com/js/h5p-resizer.js" charset="UTF-8"></script>
+
     
     <script defer src="js/player.js"></script>
     <script src="https://kit.fontawesome.com/7e5b2d153f.js" crossorigin="anonymous"></script>
